--- a/templates/search.html
+++ b/templates/search.html
@@ -55,7 +55,7 @@
 							<div class="row">
 								<div class="col-lg-*6 col-md-*6 col-sm-*6 col-*6">
 									 <div class="logo">
-											<a href="index.html"><img src="../static/assets/img/logo/logo.png" alt=""></a>
+											<a href="/"><img src="../static/assets/img/logo/logo.png" alt=""></a>
 									  </div>
 								</div>
 								<div class="col-lg-*2 col-md-*2 col-sm-*2 col-*2">
@@ -100,7 +100,7 @@
                                                 <li><a href="index-6.html">Home 6</a></li>
                                             </ul>
                                         </li>
-                                        <li class="mega_items"><a class="active" href="search.html">dataset</a> 
+                                        <li class="mega_items"><a class="active" href="/search">dataset</a>
                                             
                                         </li>
                                         <li><a href="blog.html">blog<i class="fa fa-angle-down"></i></a>
@@ -176,6 +176,7 @@
 					</div>
 				</div>
 		</div>
+        //单击搜索进入summary
     </div>
     <!--breadcrumbs area end-->
     
