--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
 							<div class="row">
 								<div class="col-lg-*6 col-md-*6 col-sm-*6 col-*6">
 									 <div class="logo">
-											<a href="index.html"><img src="../static/assets/img/logo/logo.png" alt=""></a>
+											<a href="/"><img src="../static/assets/img/logo/logo.png" alt=""></a>
 									  </div>
 								</div>
 								<div class="col-lg-*2 col-md-*2 col-sm-*2 col-*2">
@@ -101,7 +101,7 @@
                             <div class="main_menu menu_position"> 
                                 <nav>  
                                     <ul>
-                                        <li><a class="active"  href="index.html">introduce<i class="fa fa-angle-down"></i></a>
+                                        <li><a class="active"  href="/">introduce<i class="fa fa-angle-down"></i></a>
                                             <ul class="sub_menu">
                                                 <li><a href="index.html">Home 1</a></li>
                                                 <li><a href="index-2.html">Home 2</a></li>
